# ithub-python-project-1

./: .coverage  .gitignore  README.md  package-lock.json  pyproject.toml  test.txt
corpus/: export.geojson  simple.txt
src/python_kt_1/cli/: .__init__.py.kate-swp  __init__.py  parse_params.py  renderer.py
src/python_kt_1/core/: exceptions.py  preprocess.py  tokenize.py
src/python_kt_1/use_cases/: .search.py.kate-swp  __init__.py  search.py  stats.py  top_words.py  word_cloud.py
tests/: conftest.py  test_stats.py
tests/search/: test_search.py  test_search_cli.py
tests/stats/: test_stats_cli.py  test_use_case.py
